<resources>
    <string name="app_name">Control\'D</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="games">Games</string>
    <string name="reviews">Reviews</string>
    <string name="lists">Lists</string>
    <string name="journal">Journal</string>
    <string name="no_items_found">No items found</string>

    <!--Shared Preference-->
    <string name="accountPrefKey">keyForAccountRAAAA</string>
    <string name="emailKey">sillyKey!</string>
    <string name="passwordKey">tutorialToldMe</string>

    <!-- Profile Tab -->
    <string name="profile_add_photo">Add Photo</string>
    <string name="profile_username">Username</string>
    <string name="profile_join_date_format">Joined %1$s</string>
    <string name="profile_photo_updated">Photo updated!</string>
    <string name="profile_recent_activity">Recent Activity</string>
    <string name="profile_more_activity">More Activity</string>
    <string name="profile_games">Games</string>
    <string name="profile_all_activity">All Activity</string>
    <string name="profile_sort_recent">Sort Recent</string>
    <string name="profile_sort_oldest">Sort Oldest</string>
    <string name="profile_reviews">Reviews</string>
    <string name="profile_likes">Likes</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_stats">Stats</string>
    <string name="profile_lists">Lists</string>
    <string name="profile_follow">Follow</string>
    <string name="logout">Logout</string>

    <!-- Sorting Dialog -->
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_newest">Newest First</string>
    <string name="sort_oldest">Oldest First</string>
    <string name="sort_name_asc">Name (A-Z)</string>
    <string name="sort_name_desc">Name (Z-A)</string>
    <string name="all_reviews">All Reviews</string>
    <string name="all_likes">All Likes</string>
    <string name="all_following">All Following</string>
    <string name="all_followers">All Followers</string>
    <string name="all_stats">All Stats</string>
    <string name="all_activity">All Activity</string>

    <!-- Diary Tab -->
    <string name="diary_add_entry">Add Entry</string>
    <string name="diary_game_title">Game Title</string>
    <string name="diary_playtime">Playtime (hours)</string>
    <string name="diary_rating">Rating</string>
    <string name="diary_review">Review</string>
    <string name="diary_tags">Tags</string>
    <string name="diary_add_tag">Add Tag</string>
    <string name="diary_save">Save</string>
    <string name="diary_cancel">Cancel</string>
    <string name="diary_edit_entry">Edit Entry</string>
    <string name="diary_delete_entry">Delete Entry</string>
    <string name="diary_no_entries">No entries for this date</string>
    <string name="diary_confirm_delete">Are you sure you want to delete this entry?</string>
    <string name="diary_yes">Yes</string>
    <string name="diary_no">No</string>

    <!-- Lists Tab -->
    <string name="lists_add_game">Add Game</string>
    <string name="lists_edit_game">Edit Game</string>
    <string name="lists_delete_game">Delete Game</string>
    <string name="lists_game_title">Game Title</string>
    <string name="lists_playtime">Playtime (hours)</string>
    <string name="lists_rating">Rating</string>
    <string name="lists_notes">Notes</string>
    <string name="lists_save">Save</string>
    <string name="lists_cancel">Cancel</string>
    <string name="lists_confirm_delete">Are you sure you want to delete this game from the list?</string>
    <string name="lists_yes">Yes</string>
    <string name="lists_no">No</string>
    <string name="lists_no_games">No games in this list</string>
    <string name="lists_public">Public</string>
    <string name="lists_private">Private</string>
    <string name="lists_created_at">Created %1$s</string>
    <string name="lists_updated_at">Updated %1$s</string>
    <string name="lists_added_at">Added %1$s</string>
    <string name="lists_create_list">Create List</string>
    <string name="lists_name">List Name</string>
    <string name="lists_description">Description</string>
    <string name="lists_my_lists">My Lists</string>
    <string name="lists_create_new">Create New List</string>
    <string name="lists_edit_list">Edit List</string>
    <string name="lists_delete_list">Delete List</string>
    <string name="lists_confirm_delete_list">Are you sure you want to delete this list?</string>
    <string name="lists_name_required">List name is required</string>
    <string name="lists_created">List created successfully</string>
    <string name="lists_create">Create List</string>
    <string name="lists_public_lists">Public Lists</string>
    <string name="lists_no_public_lists">No public lists available</string>
    <string name="lists_no_games_in_list">No games in this list</string>
    <string name="lists_added_on">Added on %1$s</string>
    <string name="lists_edit_game_notes">Edit notes for %1$s</string>
    <string name="lists_remove_game">Remove Game</string>
    <string name="lists_remove">Remove</string>
    <string name="lists_confirm_remove_game">Are you sure you want to remove %1$s from this list?</string>
    <string name="lists_game_removed">Game removed from list</string>
    <string name="lists_error">Error</string>
    <string name="lists_success">Success</string>
    <string name="lists_updated">List updated successfully</string>
    <string name="lists_deleted">List deleted successfully</string>
    <string name="lists_delete">Delete</string>
    <string name="lists_game_added">%1$s added to list %2$s</string>
    <string name="lists_no_lists_to_add">You don\'t have any lists. Create a list first.</string>
    <string name="lists_select_list">Select a List</string>
    <string name="lists_game_already_exists">This game is already in the list</string>
    <string name="lists_error_adding_game">Error adding game to list</string>
    <string name="lists_add_from_search">Navigate to search to add games</string>
    <string name="error_not_logged_in">You need to be logged in to perform this action</string>
    <string name="error_loading_lists">Error loading lists</string>
    <string name="error_creating_list">Error creating list</string>
    <string name="error_updating_list">Error updating list</string>
    <string name="error_loading_list">Error loading list</string>
    <string name="error_deleting_list">Error deleting list</string>
    <string name="game_added_to_list">Game added to list</string>
    <string name="game_already_in_list">Game already in this list</string>
    <string name="error_adding_to_list">Error adding game to list</string>
    
    <plurals name="lists_game_count">
        <item quantity="one">%d game</item>
        <item quantity="other">%d games</item>
    </plurals>

    <!-- Playlist -->
    <string name="playlist_title">Playlist</string>
    <string name="playlist_add_game">Add Game</string>
    <string name="playlist_sort">Sort</string>
    <string name="playlist_edit">Edit Playlist</string>
    <string name="playlist_delete">Delete Playlist</string>
    <string name="playlist_confirm_delete">Are you sure you want to delete this playlist?</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="playlist_item_count">%d items</string>
    <string name="add_items">Add Items</string>
    <string name="more_options">More Options</string>
    <string name="sort">Sort</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="move_to_top">Move to Top</string>
    <string name="move_to_bottom">Move to Bottom</string>
    <string name="playlist_sort_release_date">Sort by Release Date</string>
    <string name="playlist_sort_added_date">Sort by Added Date</string>
    <string name="playlist_sort_title">Sort by Title</string>
    <string name="playlist_sort_order">Sort Order</string>
    <string name="playlist_sort_ascending">Ascending</string>
    <string name="playlist_sort_descending">Descending</string>
    <string name="playlist_filter_genres">Filter by Genres</string>
    <string name="playlist_filter_tags">Filter by Tags</string>
    <string name="playlist_clear_filters">Clear Filters</string>
    <string name="playlist_save">Save</string>
    <string name="playlist_cancel">Cancel</string>
    <string name="playlist_create">Create Playlist</string>
    <string name="apply">Apply</string>
    <string name="playlist_item_cover">Playlist item cover</string>
    <string name="playlist_item_menu">Playlist item menu</string>

    <string name="sign_on">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="tour">Open the Tour</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="go">Go</string>
    <string name="join">Join</string>
    <string name="minecraft">Minecraft</string>
    <string name="infinity_nikki">Infinity Nikki</string>
    <string name="mario_odyssey">Mario Odyssey</string>
    <string name="terraria">Terraria</string>
    <string name="game_name_here">Game Name Here</string>

    <!-- Steam Integration -->
    <string name="connect_steam">Connect Steam Account</string>
    <string name="steam_connected">Connected to Steam</string>
    <string name="steam_connection_failed">Failed to connect to Steam</string>
    <string name="steam_games_fetch_failed">Failed to fetch Steam games</string>
    <string name="create_review">Create review</string>
    <string name="view_reviews">View reviews</string>


    <string name="search_hint">Search games, users, or lists</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="clear_recent_searches">Clear Recent Searches</string>
    <string name="no_recent_searches">No recent searches</string>
    <string name="search_filter_games">Games</string>
    <string name="search_filter_users">Users</string>
    <string name="search_filter_lists">Lists</string>
    <string name="search_filter_genres">Genres</string>
    <string name="search_filter_all">All</string>
    <string name="clear_search">Clear search</string>

    <string name="lists_game_count">%d item%s</string>

    <string name="error_adding_game">Error adding game to list</string>

    <string name="profile">Profile</string>

    <string name="my_games">My Steam Games</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_liked_games">My Liked Games</string>
    <string name="following">Following</string>
    <string name="my_followers">My Followers</string>
    <string name="view_stats">View Stats</string>

</resources>